name alignment fix

--- a/css/style.css
+++ b/css/style.css
@@ -769,6 +769,38 @@ h2 {
   max-width: 28rem;
 }
 
+.max-w-sm {
+  max-width: 24rem;
+}
+
+.max-w-\[357px\] {
+  max-width: 357px;
+}
+
+.max-w-xs {
+  max-width: 20rem;
+}
+
+.flex-none {
+  flex: none;
+}
+
+.flex-shrink {
+  flex-shrink: 1;
+}
+
+.flex-shrink-0 {
+  flex-shrink: 0;
+}
+
+.shrink {
+  flex-shrink: 1;
+}
+
+.flex-grow-0 {
+  flex-grow: 0;
+}
+
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
@@ -1497,6 +1529,12 @@ h2 {
   color: rgb(8 47 73 / var(--tw-text-opacity));
 }
 
+@media (min-width: 480px) {
+  .sm\:max-w-none {
+    max-width: none;
+  }
+}
+
 @media (min-width: 768px) {
   .md\:top-1\/3 {
     top: 33.333333%;
@@ -1568,6 +1606,14 @@ h2 {
 
   .md\:w-2\/3 {
     width: 66.666667%;
+  }
+
+  .md\:w-auto {
+    width: auto;
+  }
+
+  .md\:max-w-none {
+    max-width: none;
   }
 
   .md\:grid-cols-3 {
